[gd_scene load_steps=23 format=3 uid="uid://ohjyvm53ohnf"]

[ext_resource type="Script" uid="uid://cexu82lyqvrx2" path="res://Scenes/Player/Cleric/clericController.gd" id="1_m2chb"]
[ext_resource type="PackedScene" uid="uid://udq0r6fp3mgm" path="res://Components/HealthModule.tscn" id="2_kcvrr"]
[ext_resource type="Texture2D" uid="uid://gg2b2lqykrx2" path="res://Sprites/animated sprites/Kobold Priest Sprite Sheet.png" id="3_hsw5j"]

[sub_resource type="CircleShape2D" id="CircleShape2D_od5hr"]
radius = 3.0

[sub_resource type="CircleShape2D" id="CircleShape2D_m2chb"]
radius = 31.0

[sub_resource type="AtlasTexture" id="AtlasTexture_50n4j"]
atlas = ExtResource("3_hsw5j")
region = Rect2(0, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ofs0d"]
atlas = ExtResource("3_hsw5j")
region = Rect2(32, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_33ff4"]
atlas = ExtResource("3_hsw5j")
region = Rect2(64, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_7ndah"]
atlas = ExtResource("3_hsw5j")
region = Rect2(96, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_qv254"]
atlas = ExtResource("3_hsw5j")
region = Rect2(128, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_inose"]
atlas = ExtResource("3_hsw5j")
region = Rect2(160, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_yl5w8"]
atlas = ExtResource("3_hsw5j")
region = Rect2(192, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_0fm16"]
atlas = ExtResource("3_hsw5j")
region = Rect2(224, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_dckre"]
atlas = ExtResource("3_hsw5j")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_m8ng0"]
atlas = ExtResource("3_hsw5j")
region = Rect2(32, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_5uuhw"]
atlas = ExtResource("3_hsw5j")
region = Rect2(64, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_g58a2"]
atlas = ExtResource("3_hsw5j")
region = Rect2(96, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_yuwo7"]
atlas = ExtResource("3_hsw5j")
region = Rect2(128, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_1kh4x"]
atlas = ExtResource("3_hsw5j")
region = Rect2(160, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_nnows"]
atlas = ExtResource("3_hsw5j")
region = Rect2(192, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_hfnra"]
atlas = ExtResource("3_hsw5j")
region = Rect2(224, 32, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_vvx6d"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_50n4j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ofs0d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_33ff4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7ndah")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qv254")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_inose")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yl5w8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0fm16")
}],
"loop": false,
"name": &"Heal",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_dckre")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m8ng0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5uuhw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g58a2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yuwo7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1kh4x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nnows")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hfnra")
}],
"loop": true,
"name": &"Run",
"speed": 10.0
}]

[node name="Cleric" type="CharacterBody2D" groups=["Players"]]
collision_mask = 15
script = ExtResource("1_m2chb")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -1)
shape = SubResource("CircleShape2D_od5hr")

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
avoidance_enabled = true
radius = 5.0

[node name="BasicCoolDown" type="Timer" parent="."]
one_shot = true

[node name="SpecialCoolDown" type="Timer" parent="."]
one_shot = true

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_m2chb")

[node name="HealthModule" parent="." instance=ExtResource("2_kcvrr")]

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_vvx6d")
animation = &"Heal"
autoplay = "Run"
frame = 7
frame_progress = 1.0
